validating-admission-policies/pod-security/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: disallow-privileged-containers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  validations:
    - expression: "object.spec.containers.all(container, !has(container.securityContext) || \
                   !has(container.securityContext.privileged) || \
                   container.securityContext.privileged == false)"
      message: "Privileged mode is disallowed. The field spec.containers[*].securityContext.privileged must either be unset or set to `false`"
    
    - expression: "!has(object.spec.initContainers) || \
                   object.spec.initContainers.all(container, !has(container.securityContext) || \
                   !has(container.securityContext.privileged) || \
                   container.securityContext.privileged == false)"
      message: "Privileged mode is disallowed. The field spec.initContainers[*].securityContext.privileged must either be unset or set to `false`"

    - expression: "!has(object.spec.ephemeralContainers) || \
                   object.spec.ephemeralContainers.all(container, !has(container.securityContext) || \
                   !has(container.securityContext.privileged) || \
                   container.securityContext.privileged == false)"
      message: "Privileged mode is disallowed. The field spec.ephemeralContainers[*].securityContext.privileged must either be unset or set to `false`"
